--- a/_config.yml
+++ b/_config.yml
@@ -33,44 +33,16 @@ author_website_url: "https://t2nds.github.io"
 typewrite-text: At Second Server Network, we aim to create a welcoming gaming community for adults interested in various game genres. We prioritize maintaining a positive atmosphere free from negativity.
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
-# Education
-author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
-                visibility: true
-
-# Projects
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
-
 # social links
 github_username:  T2NDS
 # facebook_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-# disqus_shortname: sujay-kundu
-# hyvor_talk_website_id: 476
-
 # syntax highlighter
 markdown: kramdown
 highlighter: rouge
 permalink: pretty
-
-# Choose what to show ( can be true or false)
-show_author_project_details: true
 
 # pagination of posts
 paginate: 4
@@ -94,8 +66,6 @@ paginate_path: "/blog/page/:num/"
 #     category: '/category/:name/'
 
 collections:
-  products:
-    output: true
   authors:
     output: true
 
@@ -111,7 +81,7 @@ defaults:
       type: authors
     values:
       layout: author
-      permalink: /blog/authors/:slug
+      permalink: /news/authors/:slug
   -
     scope:
       path: 'assets/**'
