--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ typewrite-text: At Second Server Network, we aim to create a welcoming gaming co
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # social links
-github_username:  T2NDS
+# github_username:  T2NDS
 # facebook_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
